# wiggle-cli

./: .gitignore  README.md  pyproject.toml
src/wiggle/: cli.py
src/wiggle/tag/: tag.py
wiggler/: cli.py  install.py  main.py
wiggler/camera/: camera.py
wiggler/experiment/: experiment.py
wiggler/neopixels/: neopixels.py
wiggler/service/: wiggle_record.service  wiggle_record_boot.sh
