[project]
name = "wiggle"
version = "0.0.47"
authors = [
  { name="Vincent Kranendonk" },
]
description = "WiggleCLI - CLI for controlling the WiggleBin"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
wiggle = "wiggle.cli:main"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-cli.git"